spacing fix

--- a/src/components/Grid/grid.css
+++ b/src/components/Grid/grid.css
@@ -1,12 +1,12 @@
 .gameboard {
     max-width: 50%;
     min-width: 35%;
+    box-sizing: border-box;
 }
 
 @media screen and (max-width: 850px) {
     .gameboard {
         min-width: 95%;
-        max-width: 100%;
-        margin: 0px auto 15px;
+        margin: 0px auto 15px 0;
     }  
 }
