--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -24,8 +24,12 @@
     -webkit-text-stroke: 0.7px black;
 }
 
-@media screen and (max-width: 500px) {
-    .header h1, span {
+@media screen and (max-width: 850px) {
+    .header h1 {
+        -webkit-text-stroke: 0px;
+    }
+
+    .header span {
         -webkit-text-stroke: 0px;
     }
 }
